kubernetes-networks/canary/web-pod.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: canary-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-app
  template:
    metadata:
      labels:
        app: canary-app
    spec:
      containers:
      - name: canary-app
        image: strm/helloworld-http
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: canary-app
  labels:
    app: canary-app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: canary-app
