kubernetes-networks/canary/ingress-header.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /canary
            pathType: Prefix
            backend:
              service:
                name: canary-app
                port:
                  number: 80
